force-app/main/default/objects/Football_Club_Role__c/Football_Club_Role__c.object-meta.xml
<CustomObject>
    <label>Football Club Role</label>
    <nameField>
        <displayFormat>FCR-{0000000}</displayFormat>
        <label>Football Club Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Football Club Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>