force-app/main/default/objects/Football_Club_Role__c/fields/Football_Club__c.field-meta.xml
<CustomField>
    <fullName>Football_Club__c</fullName>
    <label>Football Club</label>
    <referenceTo>Football_Club__c</referenceTo>
    <relationshipLabel>Football Club Roles</relationshipLabel>
    <relationshipName>Football_Club_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>