force-app/main/default/objects/Football_Club_Role__c/fields/Human__c.field-meta.xml
<CustomField>
    <fullName>Human__c</fullName>
    <label>Human</label>
    <referenceTo>Human__c</referenceTo>
    <relationshipLabel>Football Club Roles</relationshipLabel>
    <relationshipName>Football_Club_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>