force-app/main/default/objects/Football_Club_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academy Coach</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Coach Assitant</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Medic</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Player</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Public Relations Manager</fullName>
            </value>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Scouting Manager</fullName>
            </value>
            <value>
                <fullName>Video Analyzer</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>